@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<oor:component-data xmlns:oor="http://openoffice.org/2001/registry" xmlns:xs="http://www.w3.org/2001/XMLSchema" oor:name="ProtocolHandler" oor:package="org.openoffice.Office">
+	<node oor:name="HandlerSet">
+		<node oor:name="scsolver.LpSolveImpl" oor:op="replace">
+			<prop oor:name="Protocols" oor:type="oor:string-list">
+				<value>scsolver.LpSolveImpl:*</value>
+			</prop>
+		</node>
+	</node>
+</oor:component-data>
