@@ -1,3 +1,9 @@
+2006-05-05  Kohei Yoshida  <kohei.yoshida@gmail.com>
+
+	* workben/external/lpsolve_uno/*: initial upload of source files for exporting
+	lp_solve library as UNO service.  Note that the source files of lp_solve library
+	are not included.
+
 2006-04-27  Michael Meeks  <michael.meeks@novell.com>
 
 	* source/ui/scsolver.hrc, source/ui/scsolver.src: add
